Starting move to WordPress.

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
     </div>
   </div>
 
-  <div class="wrapper-slider">
-    <div id="featured-slides" class="slider">
-      <a href="#" class="control prev">Prev</a>
+  <div class="wrapper-carousel">
+    <a href="#" class="control prev">Prev</a>
+    <div id="featured-slides" class="carousel">
       <img src="assets/images/temp/squirrel.png" alt="Image 02" height="267" width="400" data-url="http://google.com" />
       <img src="assets/images/temp/squirrel.png" alt="Image 02" height="267" width="400" />
       <img src="assets/images/temp/squirrel.png" alt="Image 02" height="267" width="400" />
@@ -77,8 +77,8 @@
       <img src="assets/images/temp/squirrel.png" alt="Image 02" height="267" width="400" />
       <img src="assets/images/temp/squirrel.png" alt="Image 02" height="267" width="400" />
       <img src="assets/images/temp/squirrel.png" alt="Image 02" height="267" width="400" />
-      <a href="#" class="control next">Next</a>
     </div>
+    <a href="#" class="control next">Next</a>
   </div>
 
   <div class="container">
